# zkdoc

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml
core_cli/: Cargo.toml
core_cli/sample/: gen-commitment.json  post.json  verify-proof.json
core_cli/src/: main.rs
core_lib/: Cargo.toml
core_lib/src/: main.rs
core_lib/src/circuits/: file_hash_partial_v3.rs
core_lib/src/services/: services.rs
core_lib/src/utils/: conversion.rs  poseidon.rs  sha256.rs
core_server/: Cargo.toml
core_server/src/: main.rs
src/: lib.rs  main.rs
src/circuits/: file_hash_partial_v2.rs  file_hash_partial_v4.rs  file_hasher.rs  mod.rs  poseidon_v2.rs
src/gadgets/: file_hash_row_selector.rs
src/services/: services.rs
src/utils/: poseidon.rs
zkdoc_cli/: Cargo.toml  README.md
zkdoc_cli/sample/: gen-proof.json
zkdoc_cli/src/: main.rs
zkdoc_sdk/: Cargo.toml  README.md
zkdoc_sdk/src/: lib.rs
zkdoc_sdk/src/circuits/: file_hash_partial.rs  file_hash_partial_v2.rs  file_hash_partial_v3.rs  file_hash_partial_v4.rs  file_hasher.rs  mod.rs  poseidon.rs  poseidon_v2.rs
zkdoc_sdk/src/gadgets/: assert_is_equal.rs  file_hash_row_selector.rs  file_selector_accumulator.rs  mod.rs  poseidon.rs  poseidon_v2.rs
zkdoc_sdk/src/services/: mod.rs  services.rs
zkdoc_sdk/src/utils/: conversion.rs  mod.rs  poseidon.rs  sha256.rs
zkdoc_server/: Cargo.toml  README.md
zkdoc_server/src/: main.rs
