[package]
edition = "2021"
name = "medi-0-core"
version = "0.1.0"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_gadgets = "0.2.0"
halo2_proofs = "0.2.0"
plotters = {version = "0.3.0", optional = true}
rand_core = {version = "0.6", default-features = false, features = ["getrandom"]}
sha2 = "0.10.6"
tabbycat = {version = "0.1", features = ["attributes"], optional = true}
ff = "0.12"
bitvec = "1.0.1"
actix-web = "4"

[lib]
crate-type = ["cdylib", "rlib"]
