[package]
name = "core_cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI
clap = "4.1.4"
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.117"
serde_json = "1.0.59"