[package]
name = "core_cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.117"
serde_json = "1.0.59"
spinners = "4.1.0"
# local lib
core_lib.workspace = true