[package]
name = "zkdoc_cli"
version = "0.0.0"
description = "CLI for zkdoc that allows generation of commitment, proof and verification of proof."
edition = "2021"
license = "MIT"
repository = "https://github.com/medi-0/core/tree/main/zkdoc_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.117"
serde_json = "1.0.59"
spinners = "4.1.0"

# local lib
zkdoc_sdk.workspace = true