[package]
name = "zkdoc_cli"
version = "0.0.1"
description = "CLI for zkdoc that allows generation of commitment, proof and verification of proof."
edition = "2021"
license = "MIT"
repository = "https://github.com/medi-0/core/tree/main/zkdoc_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2"
serde.workspace = true
serde_json = "1.0.93"
spinners = "4.1.0"
zkdoc_sdk = { path = "../zkdoc_sdk" }